--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "helmet": "^4.0.0",
         "knex": "^0.21.2",
         "sqlite3": "^5.0.0",
-        "dotenv": "^8.2.0",
+        "dotenv": "^8.2.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
