--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Guided project for **Node API** module 4.",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "watch": " nodemon --require dotenv/config index.js",
+    "server": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,8 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
   }
 }
